# Time-Series-Modelling-Case-Study---24087340

./: 01_Data_Loading_and_EDA.ipynb  02_Benchmark_Forecasting.ipynb  03_SARIMA_Modelling.ipynb  04_SARIMAX_Exogenous_Regressor.ipynb  05_Feature_Model.ipynb  06_LSTM.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
data/processed/: berlin_temp_daily.csv  daily_load.csv  feature_df.csv  hourly_load.csv  weekly_load.csv
outputs/02/: benchmark_forecasts.csv  benchmark_metrics.csv
outputs/03/: sarima_forecast.csv  sarima_gridsearch.csv
outputs/04/: feature_df.csv  sarimax_forecast.csv
outputs/05/: feature_forecast.csv
outputs/06/: lstm_hourly_forecast.csv  lstm_weekly_forecast.csv
outputs/forecasts/: all_forecasts.csv
outputs/metrics/: model_comparison.csv
scripts/: download_data.py  evaluate_models.py  make_features.py  run_pipeline.py
src/electricity_demand/: config.py  data.py  evaluation.py  features.py  pipeline.py  plotting.py
src/electricity_demand/models/: bayesian.py  benchmarks.py  feature_models.py  neural.py  sarimax.py
tests/: test_benchmarks.py  test_evaluation.py  test_features.py
