[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-demand-forecasting"
version = "0.1.0"
description = "Weekly German electricity demand forecasting: benchmarks, SARIMAX, feature-based and LSTM models."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
